FIX: Corrige Docker Compose para Confluent/KRaft e garante scripts funcionando

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-# Ambiente Virtual
 venv/
 *.venv
 .venv/
 
-# Cache do Python
 __pycache__/
 *.pyc
 .pytest_cache/
 
-# Arquivos do VS Code
+kafka_data/
+
 .vscode/
 
-# Arquivos do Docker (geralmente não são versionados)
 .dockerignore
